feat: refactor role API routes to use ids instead of names, update API swagger docs
