# docs/swagger.json
@@ -319,9 +319,12 @@
                 }
             }
         },
-        "/role/{rname}": {
+        "/role": {
             "post": {
                 "description": "Creates a new role in the database.",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -331,9 +334,46 @@
                 "summary": "Add a new role",
                 "parameters": [
                     {
+                        "description": "Role to be added",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/database.Role"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/role/{rid}": {
+            "post": {
+                "description": "Creates a new role in the database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Roles"
+                ],
+                "summary": "Update a role",
+                "parameters": [
+                    {
                         "type": "string",
-                        "description": "Role name",
-                        "name": "rname",
+                        "description": "Role Id",
+                        "name": "rid",
                         "in": "path",
                         "required": true
                     }
@@ -341,6 +381,12 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
@@ -365,50 +411,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Role name to delete",
-                        "name": "rname",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/role/{rname}/{newname}": {
-            "put": {
-                "description": "Renames an existing role in the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Roles"
-                ],
-                "summary": "Update an existing role name",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Current role name",
-                        "name": "rname",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "New role name",
-                        "name": "newname",
+                        "description": "Id of role to delete",
+                        "name": "rid",
                         "in": "path",
                         "required": true
                     }
@@ -504,7 +508,7 @@
                 }
             }
         },
-        "/user/{name}": {
+        "/user/{uname}": {
             "delete": {
                 "description": "Deletes a user from the database and removes their session from active users.",
                 "produces": [
@@ -678,10 +682,13 @@
                 "color": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
-                "userCount": {
+                "usercount": {
                     "type": "integer"
                 }
             }
